Plotting refinements in Orr-Sommerfeld pseudospectra notebook.

--- a/examples/Orr Sommerfeld pseudospectra.ipynb
+++ b/examples/Orr Sommerfeld pseudospectra.ipynb
@@ -230,13 +230,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(prim_EP.evalues.real, prim_EP.evalues.imag,color='red')\n",
-    "plt.scatter(EP.evalues.real, EP.evalues.imag,color='blue',marker='x')\n",
-    "\n",
-    "\n",
     "clevels = [-8,-7,-6,-5,-4,-3,-2,-1]\n",
-    "OS_CS = plt.contour(EP.ps_real,EP.ps_imag, np.log10(EP.pseudospectrum),levels=clevels,colors='blue')\n",
-    "P_CS = plt.contour(prim_EP.ps_real,prim_EP.ps_imag, np.log10(prim_EP.pseudospectrum),levels=clevels,colors='red')\n",
+    "OS_CS = plt.contour(EP.ps_real,EP.ps_imag, np.log10(EP.pseudospectrum),levels=clevels,colors='blue',linestyles='solid', alpha=0.5)\n",
+    "P_CS = plt.contour(prim_EP.ps_real,prim_EP.ps_imag, np.log10(prim_EP.pseudospectrum),levels=clevels,colors='red',linestyles='solid', alpha=0.5)\n",
+    "\n",
+    "plt.scatter(prim_EP.evalues.real, prim_EP.evalues.imag,color='red',zorder=3)\n",
+    "plt.scatter(EP.evalues.real, EP.evalues.imag,color='blue',marker='x',zorder=4)\n",
     "\n",
     "lines = [OS_CS.collections[0],P_CS.collections[0]]\n",
     "labels = ['O-S form', 'primitive form']\n",
@@ -276,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
