First complete draft

--- a/JOSS-paper/paper.bib
+++ b/JOSS-paper/paper.bib
@@ -1,3 +1,19 @@
+@ARTICLE{2020arXiv201112300L,
+       author = {{Lin}, Min-Kai},
+        title = "{Stratified and vertically-shearing streaming instabilities in protoplanetary disks}",
+      journal = {Astrophysical Journal, accepted},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2020,
+        month = nov,
+          eid = {arXiv:2011.12300},
+        pages = {arXiv:2011.12300},
+archivePrefix = {arXiv},
+       eprint = {2011.12300},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201112300L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{doi:10.1063/1.4934378,
 author = {Krejčiřík,D.  and Siegl,P.  and Tater,M.  and Viola,J. },
 title = {Pseudospectra in non-Hermitian quantum mechanics},
@@ -410,7 +426,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2012ApJ...756..109B,
        author = {{Brown}, Benjamin P. and {Vasil}, Geoffrey M. and {Zweibel}, Ellen G.},
         title = "{Energy Conservation and Gravity Waves in Sound-proof Treatments of Stellar Interiors. Part I. Anelastic Approximations}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {stars: interiors, Sun: interior, Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics},
          year = 2012,
         month = sep,
@@ -430,7 +446,7 @@ archivePrefix = {arXiv},
        author = {{Vasil}, Geoffrey M. and {Lecoanet}, Daniel and {Brown}, Benjamin P. and
          {Wood}, Toby S. and {Zweibel}, Ellen G.},
         title = "{Energy Conservation and Gravity Waves in Sound-proof Treatments of Stellar Interiors. II. Lagrangian Constrained Analysis}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {planets and satellites: atmospheres, stars: interiors, Sun: interior, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Physics - Atmospheric and Oceanic Physics, Physics - Fluid Dynamics},
          year = 2013,
         month = aug,
@@ -523,6 +539,17 @@ archivePrefix = {arXiv},
   publisher={Clarendon Press}
 }
 
+@book{boyd2001chebyshev,
+  title={Chebyshev and Fourier Spectral Methods: Second Revised Edition},
+  author={Boyd, J.P.},
+  isbn={9780486411835},
+  lccn={lc00027475},
+  series={Dover Books on Mathematics},
+  url={https://books.google.com/books?id=i9UoAwAAQBAJ},
+  year={2001},
+  publisher={Dover Publications}
+}
+
 @article{PhysRevResearch.2.023068,
   title = {Dedalus: A flexible framework for numerical simulations with spectral methods},
   author = {Burns, Keaton J. and Vasil, Geoffrey M. and Oishi, Jeffrey S. and Lecoanet, Daniel and Brown, Benjamin P.},
@@ -579,7 +606,7 @@ archivePrefix = {arXiv},
        author = {{Anders}, Evan H. and {Manduca}, Cathryn M. and {Brown}, Benjamin P. and
          {Oishi}, Jeffrey S. and {Vasil}, Geoffrey M.},
         title = "{Predicting the Rossby Number in Convective Experiments}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {convection, dynamo, hydrodynamics, Sun: rotation, turbulence, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Physics - Fluid Dynamics},
          year = 2019,
         month = feb,
@@ -636,7 +663,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2018ApJ...854....8B,
        author = {{Bordwell}, Baylee and {Brown}, Benjamin P. and {Oishi}, Jeffrey S.},
         title = "{Convective Dynamics and Disequilibrium Chemistry in the Atmospheres of Giant Planets and Brown Dwarfs}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {brown dwarfs, hydrodynamics, planetary systems, planets and satellites: atmospheres, planets and satellites: composition, methods: numerical, Astrophysics - Earth and Planetary Astrophysics},
          year = 2018,
         month = feb,
@@ -652,10 +679,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2017ApJ...841....2C,
+@ARTICLE{2017ApJ.841.2C,
        author = {{Clark}, S.~E. and {Oishi}, Jeffrey S.},
         title = "{The Weakly Nonlinear Magnetorotational Instability in a Global, Cylindrical Taylor-Couette Flow}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {accretion, accretion disks, instabilities, magnetic fields, magnetohydrodynamics: MHD, methods: analytical, plasmas, Astrophysics - High Energy Astrophysical Phenomena, Physics - Fluid Dynamics},
          year = 2017,
         month = may,
@@ -671,10 +698,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2017ApJ...841....1C,
+@ARTICLE{2017ApJ.841.1C,
        author = {{Clark}, S.~E. and {Oishi}, Jeffrey S.},
         title = "{The Weakly Nonlinear Magnetorotational Instability in a Local Geometry}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {accretion, accretion disks, instabilities, magnetohydrodynamics: MHD, methods: analytical, plasmas, Astrophysics - High Energy Astrophysical Phenomena, Physics - Fluid Dynamics},
          year = 2017,
         month = may,
@@ -695,7 +722,7 @@ archivePrefix = {arXiv},
          {Bildsten}, Lars and {Timmes}, F.~X. and {Burns}, Keaton J. and
          {Vasil}, Geoffrey M. and {Oishi}, Jeffrey S. and {Brown}, Benjamin P.},
         title = "{Turbulent Chemical Diffusion in Convectively Bounded Carbon Flames}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {convection, hydrodynamics, stars: interiors, turbulence, Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics},
          year = 2016,
         month = nov,
@@ -756,7 +783,7 @@ archivePrefix = {arXiv},
        author = {{Oishi}, Jeffrey S. and {Mac Low}, Mordecai-Mark and
          {Collins}, David C. and {Tamura}, Moeko},
         title = "{Self-generated Turbulence in Magnetic Reconnection}",
-      journal = {\apjl},
+      journal = {Astrophysical Journal Letters},
      keywords = {magnetic reconnection, turbulence, Astrophysics - Solar and Stellar Astrophysics, Physics - Plasma Physics},
          year = 2015,
         month = jun,
@@ -776,7 +803,7 @@ archivePrefix = {arXiv},
        author = {{Lecoanet}, Daniel and {Brown}, Benjamin P. and {Zweibel}, Ellen G. and
          {Burns}, Keaton J. and {Oishi}, Jeffrey S. and {Vasil}, Geoffrey M.},
         title = "{Conduction in Low Mach Number Flows. I. Linear and Weakly Nonlinear Regimes}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {conduction, convection, stars: interiors, waves, Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics},
          year = 2014,
         month = dec,
@@ -795,7 +822,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2011ApJ...740...18O,
        author = {{Oishi}, Jeffrey S. and {Mac Low}, Mordecai-Mark},
         title = "{Magnetorotational Turbulence Transports Angular Momentum in Stratified Disks with Low Magnetic Prandtl Number but Magnetic Reynolds Number above a Critical Value}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {accretion, accretion disks, dynamo, instabilities, magnetohydrodynamics: MHD, Astrophysics - Solar and Stellar Astrophysics},
          year = 2011,
         month = oct,
@@ -816,7 +843,7 @@ archivePrefix = {arXiv},
          {Skory}, Stephen and {Skillman}, Samuel W. and {Abel}, Tom and
          {Norman}, Michael L.},
         title = "{yt: A Multi-code Analysis Toolkit for Astrophysical Simulation Data}",
-      journal = {\apjs},
+      journal = {Astrophysical Journals},
      keywords = {cosmology: theory, methods: data analysis, methods: numerical, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2011,
         month = jan,
@@ -835,7 +862,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2010ApJ...721.1593C,
        author = {{Chang}, Philip and {Oishi}, Jeffrey S.},
         title = "{On the Stability of Dust-laden Protoplanetary Vortices}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {accretion, accretion disks, hydrodynamics, instabilities, planets and satellites: formation, protoplanetary disks, Astrophysics - Earth and Planetary Astrophysics},
          year = 2010,
         month = oct,
@@ -853,7 +880,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2009ApJ...704.1239O,
        author = {{Oishi}, Jeffrey S. and {Mac Low}, Mordecai-Mark},
         title = "{On Hydrodynamic Motions in Dead Zones}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {MHD, planetary systems: protoplanetary disks, Astrophysics - Earth and Planetary Astrophysics},
          year = 2009,
         month = oct,
@@ -871,7 +898,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2007ApJ...670..805O,
        author = {{Oishi}, Jeffrey S. and {Mac Low}, Mordecai-Mark and {Menou}, Kristen},
         title = "{Turbulent Torques on Protoplanets in a Dead Zone}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {Accretion, Accretion Disks, Magnetohydrodynamics: MHD, Stars: Planetary Systems: Formation, Stars: Planetary Systems: Protoplanetary Disks, Turbulence, Astrophysics},
          year = 2007,
         month = nov,
@@ -889,7 +916,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2006ApJ...638..281O,
        author = {{Oishi}, Jeffrey S. and {Mac Low}, Mordecai-Mark},
         title = "{The Inability of Ambipolar Diffusion to Set a Characteristic Mass Scale in Molecular Clouds}",
-      journal = {\apj},
+      journal = {Astrophysical Journal},
      keywords = {ISM: Clouds, ISM: Kinematics and Dynamics, ISM: Magnetic Fields, Magnetohydrodynamics: MHD, Stars: Formation, Turbulence, Astrophysics},
          year = 2006,
         month = feb,
@@ -1218,7 +1245,7 @@ eprint = {
 }
 }
 
-@ARTICLE{2020NatRP...2..181S,
+@ARTICLE{2020NatRP.2.181S,
        author = {{Shaebani}, M. Reza and {Wysocki}, Adam and {Winkler}, Roland G. and {Gompper}, Gerhard and {Rieger}, Heiko},
         title = "{Computational models for active matter}",
       journal = {Nature Reviews Physics},
