--- a/JOSS-paper/paper.bib
+++ b/JOSS-paper/paper.bib
@@ -1,3 +1,36 @@
+@ARTICLE{2017PhRvF.2h3501A,
+       author = {{Anders}, Evan H. and {Brown}, Benjamin P.},
+        title = "{Convective heat transport in stratified atmospheres at low and high Mach number}",
+      journal = {Physical Review Fluids},
+     keywords = {Physics - Fluid Dynamics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = aug,
+       volume = {2},
+       number = {8},
+          eid = {083501},
+        pages = {083501},
+          doi = {10.1103/PhysRevFluids.2.083501},
+archivePrefix = {arXiv},
+       eprint = {1611.06580},
+ primaryClass = {physics.flu-dyn},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017PhRvF...2h3501A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{LORING2015383,
+title = "K-theory and pseudospectra for topological insulators",
+journal = "Annals of Physics",
+volume = "356",
+pages = "383 - 416",
+year = "2015",
+issn = "0003-4916",
+doi = "https://doi.org/10.1016/j.aop.2015.02.031",
+url = "http://www.sciencedirect.com/science/article/pii/S0003491615000901",
+author = "Terry A. Loring",
+keywords = "Topological insulators, -theory, Phase transitions, Algorithms",
+abstract = "We derive formulas and algorithms for Kitaev’s invariants in the periodic table for topological insulators and superconductors for finite disordered systems on lattices with boundaries. We find that K-theory arises as an obstruction to perturbing approximately compatible observables into compatible observables. We derive formulas in all symmetry classes up to dimension two, and in one symmetry class in dimension three, that can be computed with sparse matrix algorithms. We present algorithms in two symmetry classes in 2D and one in 3D and provide illustrative studies regarding how these algorithms can detect the scaling properties of phase transitions."
+}
+
 @ARTICLE{2020arXiv201112300L,
        author = {{Lin}, Min-Kai},
         title = "{Stratified and vertically-shearing streaming instabilities in protoplanetary disks}",
@@ -602,7 +635,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2019ApJ...872..138A,
+@ARTICLE{2019ApJ.872.138A,
        author = {{Anders}, Evan H. and {Manduca}, Cathryn M. and {Brown}, Benjamin P. and
          {Oishi}, Jeffrey S. and {Vasil}, Geoffrey M.},
         title = "{Predicting the Rossby Number in Convective Experiments}",
