Capitalisation in bibliography

--- a/JOSS-paper/paper.bib
+++ b/JOSS-paper/paper.bib
@@ -16,7 +16,7 @@
 
 @article{doi:10.1137/0153002,
 author = {Reddy, Satish C. and Schmid, Peter J. and Henningson, Dan S.},
-title = {Pseudospectra of the Orr–Sommerfeld Operator},
+title = {Pseudospectra of the {O}rr–{S}ommerfeld Operator},
 journal = {SIAM Journal on Applied Mathematics},
 volume = {53},
 number = {1},
@@ -50,7 +50,7 @@ eprint = {
 }
 
 @book{boyd2001chebyshev,
-  title={Chebyshev and Fourier Spectral Methods: Second Revised Edition},
+  title={Chebyshev and {F}ourier {S}pectral {M}ethods: Second Revised Edition},
   author={Boyd, J.P.},
   isbn={9780486411835},
   lccn={lc00027475},
@@ -119,7 +119,7 @@ eprint = {
 }
 
 @book{trefethen2005spectra,
-  title={Spectra and Pseudospectra: The Behavior of Nonnormal Matrices and Operators},
+  title={Spectra and {P}seudospectra: The Behavior of Nonnormal Matrices and Operators},
   author={Trefethen, L.N. and Embree, M.},
   isbn=9780691119465,
   lccn=2005046573,
@@ -129,7 +129,7 @@ eprint = {
 }
 
 @book{schmid2012stability,
-  title={Stability and Transition in Shear Flows},
+  title={Stability and {T}ransition in {S}hear {F}lows},
   author={Schmid, P.J. and Henningson, D.S.},
   isbn={9781461301851},
   series={Applied Mathematical Sciences},
